# bwia-smart-code-builder

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
scripts/: setup.ps1  setup.sh
smart_code_builder/: __init__.py  agent.py  audit_agent.py  config.py  create_agent.py  improve_agent.py  model.py  modernize_agent.py
smart_code_builder/_tools/: code_tools.py  file_tools.py  standards_tools.py  token_tools.py
standards/: python_standards.md  typescript_standards.md
